--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+    <!-- the definitions for the servlets -->
+    <servlet>
+        <servlet-name>addRegistrant</servlet-name>
+        <servlet-class>seminar.Registration</servlet-class>
+    </servlet>
+
+    <!-- the mapping for the servlets -->
+    <servlet-mapping>
+        <servlet-name>addRegistrant</servlet-name>
+        <url-pattern>/addSeminarRegister</url-pattern>
+    </servlet-mapping>
 </web-app>
