--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
     </dependencies>
 
     <build>
-        <finalName>webapp</finalName>
+        <finalName>recipeery</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -99,7 +99,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <configuration>
-                        <webXml>web\WEB-INF\web.xml</webXml>
+                        <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
                     </configuration>
                 </plugin>
 
