--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>3.2.0</version>
         </dependency>
 
+        <!-- Database -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.15.1</version>
+        </dependency>
+
         <!-- jstl -->
         <dependency>
             <groupId>jstl</groupId>
@@ -81,6 +88,30 @@
         <finalName>recipeery</finalName>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.0.1</version>
+                    <executions>
+                        <execution>
+                            <id>default-copy-resources</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>copy-resources</goal>
+                            </goals>
+                            <configuration>
+                                <overwrite>true</overwrite>
+                                <outputDirectory>${project.build.directory}/${project
+                                .artifactId}/WEB-INF/db</outputDirectory>
+                                <resources>
+                                    <resource>
+                                        <directory>${project.basedir}/db</directory>
+                                    </resource>
+                                </resources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
