--- a/pom.xml
+++ b/pom.xml
@@ -102,36 +102,38 @@
 
     <build>
         <finalName>recipeery</finalName>
+
         <resources>
             <resource>
                 <directory>db</directory>
             </resource>
         </resources>
+
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.1</version>
-                    <executions>
-                        <execution>
-                            <id>default-copy-resources</id>
-                            <phase>process-resources</phase>
-                            <goals>
-                                <goal>copy-resources</goal>
-                            </goals>
-                            <configuration>
-                                <overwrite>true</overwrite>
-                                <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/db</outputDirectory>
-                                <resources>
-                                    <resource>
-                                        <directory>${project.basedir}/db</directory>
-                                    </resource>
-                                </resources>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+                <!--<plugin>-->
+                    <!--<groupId>org.apache.maven.plugins</groupId>-->
+                    <!--<artifactId>maven-resources-plugin</artifactId>-->
+                    <!--<version>3.0.1</version>-->
+                    <!--<executions>-->
+                        <!--<execution>-->
+                            <!--<id>default-copy-resources</id>-->
+                            <!--<phase>process-resources</phase>-->
+                            <!--<goals>-->
+                                <!--<goal>copy-resources</goal>-->
+                            <!--</goals>-->
+                            <!--<configuration>-->
+                                <!--<overwrite>false</overwrite>-->
+                                <!--<outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/</outputDirectory>-->
+                                <!--<resources>-->
+                                    <!--<resource>-->
+                                        <!--<directory>${project.basedir}/db</directory>-->
+                                    <!--</resource>-->
+                                <!--</resources>-->
+                            <!--</configuration>-->
+                        <!--</execution>-->
+                    <!--</executions>-->
+                <!--</plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
