--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
         <servlet-name>getUsers</servlet-name>
         <servlet-class>com.user.services.GetUsers</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>updateUser</servlet-name>
+        <servlet-class>com.user.services.UpdateUser</servlet-class>
+    </servlet>
 
     <!-- the mapping for the servlets -->
     <servlet-mapping>
@@ -40,5 +44,9 @@
     <servlet-mapping>
         <servlet-name>getUsers</servlet-name>
         <url-pattern>/getUsers</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>updateUser</servlet-name>
+        <url-pattern>/updateUser</url-pattern>
     </servlet-mapping>
 </web-app>
