Removed brewery files, add apache utility

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
             <version>3.2.0</version>
         </dependency>
 
+        <!-- utilites -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+
         <!-- Database -->
         <dependency>
             <groupId>org.xerial</groupId>
