--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,14 @@
         <servlet-name>deleteUser</servlet-name>
         <servlet-class>com.user.services.DeleteUser</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <servlet-class>com.user.services.Logout</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>com.user.services.Login</servlet-class>
+    </servlet>
 
     <!-- the mapping for the servlets -->
     <servlet-mapping>
@@ -61,6 +69,14 @@
         <servlet-name>deleteUser</servlet-name>
         <url-pattern>/deleteUser/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
 
     <!-- secure admin pages -->
     <security-constraint>
@@ -77,4 +93,9 @@
         <auth-method>BASIC</auth-method>
         <realm-name>Admin Login</realm-name>
     </login-config>
+
+    <!-- Security roles referenced by this web application -->
+    <security-role>
+        <role-name>admin</role-name>
+    </security-role>
 </web-app>
